# RTAutoContouringPipeLine

./: .env.example  Dockerfile  LICENSE  README.md  alembic.ini  config.toml  design.md  docker-compose.yml  pyproject.toml
alembic/: env.py
backend/: celery_app.py  config.py  database.py  hardware.py  logging_config.py  main.py
backend/core/: base_exporter.py  base_model_runner.py  base_trigger.py
backend/models/: __init__.py  audit_log.py  dataset.py  dataset_fingerprint.py  deployment.py  guardrail_config.py  inference_run.py  model_registry.py  study.py
backend/routers/: audit.py  datasets.py  deployments.py  fingerprinting.py  ingestion.py  training.py  validation.py
backend/services/deployment/: rtstruct_generator.py  runner.py
backend/services/inference/: guardrail_validator.py
backend/services/ingestion/: folder_watcher.py  orthanc.py  proknow_sync.py
backend/services/preprocessing/: conversion.py  dataset_builder.py  fingerprinter.py  guardrail_generator.py
backend/services/training/: docker_runner.py  nnunet.py
backend/services/validation/: metrics.py
backend/tasks/: conversion.py  fingerprint.py  inference.py  metrics.py  training.py
deployments/: example_prostate_t2.toml
docker/orthanc/: orthanc.json
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: NiiVueViewer.jsx
frontend/src/pages/: Audit.jsx  Datasets.jsx  Deployments.jsx  Guardrails.jsx  Ingestion.jsx  Training.jsx
tests/: test_audit_log.py  test_config.py  test_hardware.py
