[project]
name = "rt-autocontouring"
version = "0.1.0"
description = "End-to-end radiotherapy auto-contouring pipeline"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

dependencies = [
  # API
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  # Task queue
  "celery[redis]>=5.4",
  # Database
  "sqlalchemy[asyncio]>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "aiosqlite>=0.20",
  # Logging
  "python-json-logger>=2.0",
  # DICOM / medical imaging
  "pydicom>=2.4",
  "SimpleITK>=2.3",
  "rt-utils>=1.2",
  # Validation metrics
  "medpy>=0.4",
  "numpy>=1.26",
  # File watching
  "watchdog>=4.0",
  # Docker SDK
  "docker>=7.0",
  # ProKnow SDK
  "proknow>=0.18",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
